# StringFilter

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  setup.py
example/: CMakeLists.txt  rabbit_and_turtle.cpp
include/StringFilter/: Node.hpp  Parser.hpp  StringFilter.hpp  StringView.hpp
src/: Node.cpp  Parser.cpp  StringFilter.cpp  StringView.cpp  export.cpp
test/: test.py
